# project_cfr

./: CMakeLists.txt  rebuild.sh
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/projet_cfr/core/: dummy.h
src/core/src/: dummy.cpp
src/services/: CMakeLists.txt
src/services/include/projet_cfr/services/: BpmnEditorModel.h  CameraService.h  CameraViewModel.h
src/services/src/: BpmnEditorModel.cpp  CameraService.cpp  CameraViewModel.cpp
src/ui/qml/: BpmnPane.qml  CameraPane.qml  Main.qml  WorkspacePage.qml
